--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# node_modules
+backend/node_modules
+frontend/node_modules
+
 # Distribution / packaging
 .Python
 build/
@@ -43,6 +47,8 @@ coverage.xml
 test-results/
 
 # Virtual environments
+backend/.env
+frontend/.env
 .env/
 .venv/
 env/
